Fix the padding of the join button on small phones.

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -281,6 +281,15 @@ a.button-collapse.top-nav.full {
   }
 }
 
+@media (max-width: 400px) {
+  #activity-header .btn-large.green {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+
+
 /*
 #activity-actions {
   float: right;
